--- a/haxball_site/templates/tournament/include/player_team.html
+++ b/haxball_site/templates/tournament/include/player_team.html
@@ -1,1 +1,77 @@
-<h1>{{ stat }}</h1>
+{% load static %}
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th scope="col">Сезон</th>
+        <th scope="col">Команда</th>
+        <th scope="col">Турнир</th>
+        <th scope="col" class="text-center"><img
+                src="{% static "img/ico/matches_icon.png" %}" height="20" width="20"
+                title="Вышел на поле"></th>
+        <th scope="col" class="text-center"><img
+                src="{% static "img/ico/ball_2.png" %}" height="20" width="20"
+                title="Забито"></th>
+        <th scope="col" class="text-center"><img
+                src="{% static "img/ico/assists_icon.png" %}" height="20" width="20"
+                title="Голевые передачи"></th>
+        <th scope="col" class="text-center"><img
+                src="{% static "img/ico/clean_sheet1.png" %}" height="20" width="20"
+                title="Сухие таймы"></th>
+        <th scope="col">
+            <div class="h-75 text-center">
+                <i class="fa fa-arrow-down text-danger" title="Заменён" aria-hidden="true"
+                   style="font-size: 21px"></i>
+            </div>
+        </th>
+        <th scope="col">
+            <div class="h-75 text-center">
+                <i class="fa fa-arrow-up text-success" title="Вышел на замену"
+                   aria-hidden="true"
+                   style="font-size: 21px"></i>
+            </div>
+        </th>
+        <th scope="col"><img src="{% static "img/ico/ball_2_og.png" %}" height="20" width="20"
+                             title="Автоголы"></th>
+        <th scope="col" class="text-center"><img
+                src="{% static "img/ico/yellow_card.png" %}" height="20" width="20"
+                title="Жёлтые карточки"></th>
+        <th scope="col" class="text-center"><img
+                src="{% static "img/ico/red_card.png" %}" height="20" width="20"
+                title="Красные карточки"></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for key,value in stat.items %}
+        <tr>
+            {% if forloop.counter == 1 %}
+                <td rowspan="{{ value|length }}">{{ key }}</td>
+            {% endif %}
+            {% for k, v in value.items %}
+                    {% if forloop.counter == 1 %}
+                        <td rowspan="{{ v|length }}">{{ k }}</td>
+                    {% endif %}
+                    {% for vv,s in  v.items %}
+                        <td>{{ vv }}</td>
+                        {% for i in s %}
+                            <td>{{ i }}</td>
+                        {% endfor %}
+
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+    {% endfor %}
+
+
+    </tbody>
+</table>
+<h2>
+    {% for key,value in stat.items %}
+        <h3>{{ key }}</h3>
+        {% for k, v in value.items %}
+            <h4>{{ k }}</h4>
+            {% for vv,s in  v.items %}
+                {{ vv }}{{ s }}
+            {% endfor %}
+        {% endfor %}
+    {% endfor %}
+</h2>
