--- a/haxball_site/templates/core/include/new_form_comment.html
+++ b/haxball_site/templates/core/include/new_form_comment.html
@@ -7,12 +7,12 @@
 
     <div class="form-group">
         {{ comment_form.body }}
-       <!-- <textarea class="form-control border" rows="3" name="body"
-                  id="contactcomment" required="" rows="2" placeholder="Оставьте Ваш комментарий"></textarea> -->
+        <!-- <textarea class="form-control border" rows="3" name="body"
+                   id="contactcomment" required="" rows="2" placeholder="Оставьте Ваш комментарий"></textarea> -->
     </div>
 
     <div align="right">
         <!--Отправить</input>-->
-        <input type="submit" class="btn btn-primary mb-5 mr-4">
+        <input type="submit" class="btn btn-primary mr-4">
     </div>
 </form>
