--- a/haxball_site/templates/core/include/new_form_comment_post.html
+++ b/haxball_site/templates/core/include/new_form_comment_post.html
@@ -13,6 +13,6 @@
 
     <div align="right">
         <!--Отправить</input>-->
-        <input type="submit" class="btn btn-primary mb-5 mr-4">
+        <input type="submit" class="btn btn-primary mr-4">
     </div>
 </form>
