--- a/haxball_site/templates/base.html
+++ b/haxball_site/templates/base.html
@@ -36,6 +36,8 @@
             src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script type="text/javascript" src="{% static "jquery/jquery-3.5.1.min.js" %}"></script>
     <script type="text/javascript" src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "summernote/summernote.min.js" %}"></script>
+
 
     <!-- Put this script tag to the <head> of your page -->
     <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
